--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,18 @@
     background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/ministere.jpg) center center no-repeat;
     background-size: cover;
 }
+.page-header-fanfare {
+    padding-top: 12rem;
+    padding-bottom: 6rem;
+    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/all7.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header-about {
+    padding-top: 12rem;
+    padding-bottom: 6rem;
+    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/images.avif) center center no-repeat;
+    background-size: cover;
+}
 
 .page-header .breadcrumb-item+.breadcrumb-item::before {
     color: #999999;
