--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@
 .page-header-about {
     padding-top: 12rem;
     padding-bottom: 6rem;
-    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/images.avif) center center no-repeat;
+    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/aboutfond.jpg) center center no-repeat;
     background-size: cover;
 }
 
