--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,30 @@
     background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/aboutfond.jpg) center center no-repeat;
     background-size: cover;
 }
+.page-header-service {
+    padding-top: 12rem;
+    padding-bottom: 6rem;
+    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/service.avif) center center no-repeat;
+    background-size: cover;
+}
+.page-header-don {
+    padding-top: 12rem;
+    padding-bottom: 6rem;
+    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/don.avif) center center no-repeat;
+    background-size: cover;
+}
+.page-header-contact {
+    padding-top: 12rem;
+    padding-bottom: 6rem;
+    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/contact.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header-faq {
+    padding-top: 12rem;
+    padding-bottom: 6rem;
+    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/faq.jpg) center center no-repeat;
+    background-size: cover;
+}
 
 .page-header .breadcrumb-item+.breadcrumb-item::before {
     color: #999999;
