--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,13 @@
     url(../img/faq.jpg) center center no-repeat;
   background-size: cover;
 }
+.page-header-newsletter {
+  padding-top: 12rem;
+  padding-bottom: 6rem;
+  background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
+    url(../img/sun.jpg) center center no-repeat;
+  background-size: cover;
+}
 
 .page-header .breadcrumb-item + .breadcrumb-item::before {
   color: #999999;
