--- a/css/style.css
+++ b/css/style.css
@@ -238,11 +238,11 @@
     url(../img/contact.jpg) center center no-repeat;
   background-size: cover;
 }
-.page-header-faq {
+.page-header-mention {
   padding-top: 12rem;
   padding-bottom: 6rem;
   background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
-    url(../img/faq.jpg) center center no-repeat;
+    url(../img/terme.webp) center center no-repeat;
   background-size: cover;
 }
 .page-header-newsletter {
@@ -250,6 +250,13 @@
   padding-bottom: 6rem;
   background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
     url(../img/sun.jpg) center center no-repeat;
+  background-size: cover;
+}
+.page-header-faq {
+  padding-top: 12rem;
+  padding-bottom: 6rem;
+  background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
+    url(../img/faq.webp) center center no-repeat;
   background-size: cover;
 }
 
