--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@
   padding-top: 12rem;
   padding-bottom: 6rem;
   background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
-    url(../img/all7.jpg) center center no-repeat;
+    url(../img/all7.jfif) center center no-repeat;
   background-size: cover;
 }
 .page-header-about {
