--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,13 @@
     url(../img/aboutfond.jpg) center center no-repeat;
   background-size: cover;
 }
+.page-header-article {
+  padding-top: 12rem;
+  padding-bottom: 6rem;
+  background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
+    url(../img/blog.jpg) center center no-repeat;
+  background-size: cover;
+}
 .page-header-service {
   padding-top: 12rem;
   padding-bottom: 6rem;
