--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
 .success {
   color: green;
 }
-
+body {
+  font-family: "Roboto", sans-serif;
+}
 /* Couleur rouge pour erreur */
 .error {
   color: red;
