--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,14 @@ body {
     url(../img/faq.webp) center center no-repeat;
   background-size: cover;
 }
+.page-header-prayer {
+  padding-top: 12rem;
+  padding-bottom: 6rem;
+  background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
+    url(../img/prayer.jpg) center center no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
 .page-header .breadcrumb-item + .breadcrumb-item::before {
   color: #999999;
