--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /********** Template CSS **********/
+
 .success {
   color: green;
 }
@@ -195,7 +196,7 @@ body {
   padding-top: 12rem;
   padding-bottom: 6rem;
   background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
-    url(../img/humanitaire.jpg) center center no-repeat;
+    url(../img/help.jpg) center center no-repeat;
   background-size: cover;
 }
 .page-header-ministere {
