--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,89 @@
 /********** Template CSS **********/
+.containers {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: #f90; Fond orange */
+  margin: 100px;
+  color: white;
+  position: relative;
+}
+.icons {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 20px;
+}
+.boxs {
+  flex: 1;
+  text-align: center;
+  height: 400px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Centre verticalement */
+  align-items: center; /* Centre horizontalement */
+}
+
+.box1s {
+  background-image: url("../img/bible.avif");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 20px;
+}
+
+.box2s {
+  background-image: url("../img/prayer.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 20px;
+}
+
+@media (max-width: 768px) {
+  .containers {
+    flex-direction: column;
+    margin: 20px;
+    height: 700px;
+  }
+  .box1s {
+    height: 200px;
+  }
+  .box2s {
+    height: 200px;
+  }
+}
+button {
+  border: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+  cursor: pointer;
+  font-weight: 600;
+  color: #fff;
+}
+
+/* Primary button */
+.primary {
+  background-color: #1976d2;
+  color: white;
+}
+
+/* Secondary button */
+.secondary {
+  background-color: #f50057;
+  color: white;
+}
+.secondary-button {
+  background-color: #ffc400;
+  color: white;
+}
 
 .success {
   color: green;
 }
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 /* Couleur rouge pour erreur */
 .error {
