--- a/css/humanitaire.css
+++ b/css/humanitaire.css
@@ -99,6 +99,14 @@ p {
   width: 50%;
   /* Autres styles pour le premier enfant */
 }
+.child13 {
+  background-image: url("../img/coktail.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 50%;
+  /* Autres styles pour le premier enfant */
+}
 
 .child2 {
   padding: 20px;
@@ -122,7 +130,8 @@ p {
   .child9,
   .child10,
   .child11,
-  .child12 {
+  .child12,
+  .child13 {
     width: 100vw;
     height: 300px;
   }
