--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
   left: 0;
   margin: 20px;
 }
+p {
+  font-weight: 300;
+}
 .boxs {
   flex: 1;
   text-align: center;
@@ -26,7 +29,7 @@
 }
 
 .box1s {
-  background-image: url("../img/bible.avif");
+  background-image: url("../img/bible.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -47,13 +50,18 @@
     margin: 20px;
     height: 700px;
   }
+  .colorTexte {
+    color: black;
+  }
+
   .box1s {
-    height: 200px;
+    height: 150px;
   }
   .box2s {
-    height: 200px;
+    height: 150px;
   }
 }
+
 button {
   border: none;
   border-radius: 4px;
