--- a/css/about.css
+++ b/css/about.css
@@ -23,9 +23,10 @@
 }
 h4 {
   text-transform: uppercase;
-  text-indent: 160px;
+
   letter-spacing: 10px;
   font-weight: bolder;
+  text-align: center;
 }
 
 h3 {
@@ -65,9 +66,10 @@ h3 {
   }
   h4 {
     text-transform: uppercase;
-    text-indent: 0px;
+
     letter-spacing: 0px;
-    font-weight: bold;
+    font-weight: 100;
+    text-align: center;
   }
   h3 {
     letter-spacing: 0px;
