--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ body {
   padding-top: 12rem;
   padding-bottom: 6rem;
   background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
-    url(../img/don.avif) center center no-repeat;
+    url(../img/help.jpg) center center no-repeat;
   background-size: cover;
 }
 .page-header-contact {
