--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 /********** Template CSS **********/
-
+p {
+  font-family: "Montserrat";
+  font-size: 1.1em;
+}
 /* Styles pour la fenêtre modale */
 .modal {
   display: none;
