--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,14 @@ body {
   background-size: cover;
   background-position: center;
 }
+.page-header-error {
+  padding-top: 12rem;
+  padding-bottom: 6rem;
+  background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
+    url(../img/error.png) center center no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
 .page-header .breadcrumb-item + .breadcrumb-item::before {
   color: #999999;
