--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,7 @@ body {
   padding-top: 12rem;
   padding-bottom: 6rem;
   background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
-    url(../img/sun.jpg) center center no-repeat;
+    url(../img/newsletter/sun.jpg) center center no-repeat;
   background-size: cover;
 }
 .page-header-faq {
