--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ p {
 }
 
 .box1s {
-  background-image: url("../img/bible.webp");
+  background-image: url("../img/bible.avif");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
