--- a/css/humanitaire.css
+++ b/css/humanitaire.css
@@ -1,6 +1,6 @@
 .parent {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 
   width: 100%;
   margin-bottom: 20px;
@@ -13,7 +13,7 @@
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 p {
@@ -24,7 +24,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child4 {
@@ -32,7 +32,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child5 {
@@ -40,7 +40,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child6 {
@@ -48,7 +48,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child7 {
@@ -56,7 +56,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child8 {
@@ -64,7 +64,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child9 {
@@ -72,7 +72,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child10 {
@@ -80,7 +80,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child11 {
@@ -88,7 +88,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child12 {
@@ -96,7 +96,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child13 {
@@ -104,7 +104,7 @@ p {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 40%;
   /* Autres styles pour le premier enfant */
 }
 .child14 {
@@ -119,8 +119,8 @@ p {
 }
 
 .child2 {
-  padding: 20px;
-  width: 50%;
+  width: 55%;
+  padding: 10px;
   /* Autres styles pour le deuxième enfant */
 }
 
