--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ p {
   background-image: url("../img/action-de-grâce.jpeg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   padding: 20px;
 }
 
