--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ body {
   padding-top: 12rem;
   padding-bottom: 6rem;
   background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
-    url(../img/help.jpg) center center no-repeat;
+    url(../img/carousel-2.jpg) center center no-repeat;
   background-size: cover;
 }
 .page-header-ministere {
@@ -450,7 +450,7 @@ body {
   padding-top: 12rem;
   padding-bottom: 6rem;
   background: linear-gradient(rgba(0, 29, 35, 0.8), rgba(0, 29, 35, 0.8)),
-    url(../img/newsletter/sun.jpg) center center no-repeat;
+    url(../img/Texturelabs_Fabric_178S.jpg) center center no-repeat;
   background-size: cover;
 }
 .page-header-faq {
