--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,40 @@
 /********** Template CSS **********/
+/*Modal   */
+
+.modalPresentation {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 10000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-contentPresentation {
+  background: whitesmoke;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  position: relative;
+  max-width: 400px;
+  margin: 20px;
+}
+
+.modal-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+/*  */
 .image-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr); /* 2 colonnes égales */
